# QR-Provisioning-ESP32

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  compress_assets.py  partitions.csv  partitions_4mb.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.heltec  sdkconfig.defaults.ttgo  sdkconfig.heltec_wifi_lora_32_V3  sdkconfig.robot_esp32  sdkconfig.tractor_esp32  sdkconfig.ttgo_lora32_v1  todo.txt
boards/: CMakeLists.txt  board.h  heltec_wifi_lora_32_v3.h  ttgo_lora32_v1.h
data/: base.css  index.css  index.html  index.js  login.css  login.html  login.js  script.js  settings.css  settings.html  settings.js  settings.json  setup.css  setup.html  setup.js  style.css
docs/: architecture.md  doxygen-setup.md  hardware.md  protocol.md  roadmap.md  setup.md
include/: Doxyfile  app_server.h  config.h  ctrl_drive.h  display.h  health_monitor.h  i_battery.h  i_sensors.h  nvs_keys.h  o_led.h  o_motors.h  ota_server.h  portal.h  prov_ui.h  qr_gen.h  settings_mgr.h  settings_server.h  udp_ctrl.h  ui_icons.h  utils_filesystem.h  utils_json.h  utils_web.h  vfs_mount.h  web_utils.h  wifi_manager.h  wifi_prov.h
src/: CMakeLists.txt  app_server.c  ctrl_drive.c  display.c  file_manager.c  health_monitor.c  i_battery.c  i_sensors.c  idf_component.yml  main.c  o_led.c  o_motors.c  ota_server.c  portal.c  prov_ui.c  qr_gen.c  settings_mgr.c  settings_server.c  udp_ctrl.c  ui_icons.c  user_settings.c  utils_filesystem.c  utils_json.c  utils_web.c  vfs_mount.c  web_utils.c  wifi_manager.c  wifi_prov.c
src-d1/: README.md  display.cpp  display.h  drive_mixer.h  health_monitor.cpp  health_monitor.h  (+15 more)
(+11 files in other folders)
